--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,7 @@
 dependencies:
   override:
+    - mkdir -p ~/.go_workspace/src/github.com/goftp
+    - ln -s ${HOME}/${CIRCLE_PROJECT_REPONAME} ${HOME}/.go_workspace/src/github.com/goftp/${CIRCLE_PROJECT_REPONAME}
     # './...' is a relative pattern which means all subdirectories
     - go get -t -d -v ./...
     - go build -v
